# Generation-Model-Develop

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup-gpu-server.sh
code/: main.py
code/utils/: __init__.py  common.py
config/: .env.sample  config.sample
data_viz/: eda.ipynb  streamlit_app.py
experiment/: external_musr.py
scripts/: setup-gpu-server.sh
